fix(root view): tabs on small screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -288,4 +288,15 @@ body {
     transform: scale(0.9);
     right: -3px;
   }
+  .view__tabs {
+    margin-left: -16px;
+    margin-right: -15px;
+
+  }
+
+  .view__tab {
+    margin-right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
